Fixed white space on splash page

--- a/frontend/src/styles/SplashVertical.css
+++ b/frontend/src/styles/SplashVertical.css
@@ -12,10 +12,19 @@
   padding-top: 30px;
   padding-bottom: 30px;
   margin-top: -64px;
-  
 }
 
 .splashContent {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  margin: 64px auto 0;
+  width: 90%;
+  max-width: 1200px;
+  position: relative;
+}
+.body{
   display: flex;
   justify-content: space-between;
   flex-direction: column;
